Moved classes in "src" directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(iut_game)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(iut_game main.cpp Color.cpp Color.h)
+add_executable(iut_game src/main.cpp src/Color.cpp src/Color.h)
